[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.1.0", features = ["derive"] }
solana-program = "1.17.1"

[lib]
name = "hello_world"
crate-type = ["cdylib", "lib"]
